--- a/parciales/parcial2_mat/server/public/package.json
+++ b/parciales/parcial2_mat/server/public/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jquery": "^3.5.0",
+    "bootstrap": "^4.5.0",
     "jquery": "^3.5.1"
   }
 }
